# ThiefFMTranslationAgent

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  buld.yml  test.yml
assets/prompts/: books.md  items.md  objectives.md  prompts.json  proper-nouns.md
src/: cache_service.rs  constants.rs  main.rs  openai_client.rs  prompt_service.rs  secure_storage.rs  translation_cache_service.rs  translation_helper.rs  translation_service.rs  utils.rs
