[package]
name = "ThiefFMTranslationAgent"
version = "0.0.1"
edition = "2021"

[dependencies]
aes-gcm = "0.11.0-pre.2"
base64 = "0.22.1"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
winreg = "0.55.0"
sha2 = "0.11.0-pre.4"
rand = "0.9.0-beta.1"
openai = "1.0.0-alpha.18"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }

[build-dependencies]
embed-resource = "2.5.1"
