[package]
name = "ThiefFMTranslationAgent"
version = "0.0.2"
edition = "2021"

[dependencies]
aes-gcm = "0.11.0-pre.2"
base64 = "0.22.1"
dirs = "6.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
winreg = "0.55.0"
sha2 = "0.11.0-pre.4"
rand = "0.9.0-beta.1"
openai = "1.0.0-alpha.18"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.95"
reqwest = "0.12.12"
webbrowser = "1.0.3"
rusqlite = { version = "0.33.0", features = ["bundled"] }
encoding_rs = "0.8.35"
chardet = "0.2.4"

[build-dependencies]
embed-resource = "3.0.1"
